// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconShield2 should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-shield-2 "
  height={12}
  viewBox="0 0 12 12"
  width={12}
>
  <path
    className="fill-color"
    d="M6 1L2 2.818v2.727C2 8.068 3.707 10.427 6 11c2.293-.573 4-2.932 4-5.455V2.818L6 1zm0 4.995h3.111C8.876 7.868 7.653 9.536 6 10.06V6H2.889V3.41L6 1.994v4z"
    fill="#8EA6B2"
    fillRule="nonzero"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconShield2 should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-shield-2 test"
  height={15}
  title="title"
  viewBox="0 0 12 12"
  width={15}
>
  <path
    className="fill-color"
    d="M6 1L2 2.818v2.727C2 8.068 3.707 10.427 6 11c2.293-.573 4-2.932 4-5.455V2.818L6 1zm0 4.995h3.111C8.876 7.868 7.653 9.536 6 10.06V6H2.889V3.41L6 1.994v4z"
    fill="#8EA6B2"
    fillRule="nonzero"
  />
</AccessibleSVG>
`;
